--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,8 @@
         android:theme="@style/Theme.HarmonicaTulaShop"
         tools:targetApi="31" >
         <activity
-            android:name=".ui.login.SignInActivity"
-            android:exported="false"
-            android:label="@string/title_activity_sign_in" />
-        <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
