--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,9 +47,11 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.5.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.annotation:annotation:1.3.0'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'com.google.guava:guava:31.1-jre'
 }
