--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    buildFeatures {
-        viewBinding true
+
+    viewBinding {
+        enabled = true
     }
 
     dataBinding{
