--- a/build.gradle
+++ b/build.gradle
@@ -3,3 +3,7 @@ plugins {
     id 'com.android.application' version '7.4.1' apply false
     id 'com.android.library' version '7.4.1' apply false
 }
+ext {
+    coreTestingVersion = '2.2.0'
+    roomVersion = '2.5.0'
+}
