--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,8 @@ dependencies {
 
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
+
+    androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersion"
+
+    androidTestImplementation "androidx.arch.core:core-testing:$rootProject.coreTestingVersion"
 }
